--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,56 @@
+.backgroundColor{
+	background-color: powderblue;
+}
+
 .horizontal-list li {
     display: inline;
-    margin-right: 10px;
+}
+
+.horizontal-list {
+    list-style-type: none;
+    overflow: hidden; 
+    background-color: #333333;
+	display:flex;
+	justify-content: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	gap: 100px;
+}
+
+.horizontal-list li a {
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.Home_Container{
+	margin-left: 30px;
+	margin-right: 30px;
+}
+
+.border{
+	border: 1px solid red;
+}
+
+header{
+	display: flex;
+	align-items: center;
+	gap: 50px;
 }
 
 .profile-photo {
     clip-path: circle();
+	/* height:"200";
+	width:"300"; */
+
 }
 
 .projects-list{
-	/* * {
+	* {
 		box-sizing: border-box;
-	} */
+	}
 
-	/* body {
-		font-family: "Open Sans", sans-serif;
-		margin: 0;
-		padding: 1rem;
-	} */
-
-	/* .wrapper {
-		max-width: 600px;
-		margin: 0 auto;
-	} */
 
 	ul {
 		list-style: none;
@@ -42,11 +71,7 @@
 		width: calc(100% - 2rem);
 		box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
 	}
-	/* This is the fish image */
-	li::before {
-		content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512' width='100' title='fish'%3E%3Cpath d='M327.1 96c-89.97 0-168.54 54.77-212.27 101.63L27.5 131.58c-12.13-9.18-30.24.6-27.14 14.66L24.54 256 .35 365.77c-3.1 14.06 15.01 23.83 27.14 14.66l87.33-66.05C158.55 361.23 237.13 416 327.1 416 464.56 416 576 288 576 256S464.56 96 327.1 96zm87.43 184c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24 13.26 0 24 10.74 24 24 0 13.25-10.75 24-24 24z' /%3E%3C/svg%3E");
-	}
-	/* Formats every second element */
+
 	li:nth-child(even) {
 		flex-direction: row-reverse;
 		background: honeydew;
@@ -61,3 +86,7 @@
 
 }
 
+footer{
+	display: flex;
+	justify-content: center;
+}
